Update the list CRS and operation methods supported by Apache SIS 1.4. Update the release management guide following Gradle and modularisation.